# Tech-Challenge01

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  commitlint.config.js  docker-compose.prod.yml  package.json  pyproject.toml  requirements.txt  test_payload.json
.claude/: settings.json  settings.local.json
.claude/commands/: baseline.md  eda.md  experiment.md  iac.md  lint.md  test-api.md  train.md
.claude/rules/: code-quality.md
.github/workflows/: cd.yml  ci-cd.yml  deploy.yml  pr.yml  tests.yml
configs/: mlp_default.yaml
data/processed/: .gitkeep  telco_churn_cleaned.csv
docs/: COMMITLINT.md  DECISIONS.md  IMPLEMENTATION_GUIDE.md  ML_CANVAS.md  MODEL_CARD.md  MONITORING_PLAN.md  REQUIREMENTS_MAINTENANCE.md  VALIDATION_REPORT.md  conventions.md  decisions.md  model_card.md  monitoring_plan.md
iac/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
iac/.claude/: settings.json
iac/flask-app/: Dockerfile  app.py  docker-compose.local.yml  requirements.txt
iac/modules/alb/: main.tf  outputs.tf  variables.tf
iac/modules/compute/: main.tf  outputs.tf  variables.tf
iac/modules/compute/templates/: user_data.sh
iac/modules/iam/: main.tf  outputs.tf  variables.tf
iac/modules/keypair/: main.tf  outputs.tf  variables.tf
iac/modules/networking/: main.tf  outputs.tf  variables.tf
iac/modules/storage/: main.tf  outputs.tf  variables.tf
models/: mlp_best.pt  mlp_config.json  pipeline.pkl  test_results.json
notebooks/: 01_EDA.py  baseline.ipynb  baseline_comparison.ipynb  baseline_v2.ipynb  baselines.ipynb  decision_tree.ipynb  dummy_classifier.ipynb  eda.ipynb  exercicio_engenharia_modelos.ipynb  feature_engineering.ipynb  mlp_grid_search.ipynb  mlp_training.ipynb  quick_tests.py  random_forest.ipynb
specs/: api-predict.md  baseline-comparison.md  data-loader.md  feature-pipeline.md  iac.md  inference-api.md  mlp-model.md  model-training.md
src/: __init__.py  config.py
src/api/: __init__.py  app.py  handlers.py  middleware.py  schemas.py  utils.py
src/data/: loader.py
src/features/: pipeline.py
src/models/: mlp.py  search.py  train.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_errors.py  test_api_predict.py  test_api_predict_batch.py  test_api_root_health.py
tests/smoke/: test_smoke.py
tests/unit/: test_data_loader.py  test_feature_pipeline.py  test_loader_pandera.py  test_schema.py  test_train_script.py
