[project]
name = "tech-challenge01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "mlflow>=3.11.1",
    "mypy>=1.20.1",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "structlog>=25.5.0",
    "taskipy>=1.14.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.29.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
# Regras a habilitar
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (ordenação de imports)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# Regras a ignorar
ignore = [
    "E501",   # line too long (formatador cuida)
    "B008",   # function call in argument defaults
]

# Permitir correção automática para todas as regras habilitadas
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Testes podem ter imports não usados (fixtures)
"tests/*" = ["F401"]

[tool.ruff.lint.isort]
# Configuração do ordenador de imports
known-first-party = ["src"]

[tool.ruff.format]
# Estilo de aspas
quote-style = "double"

# Indentação
indent-style = "space"

# Final de linha
line-ending = "auto"

# =============================================================================
# TASKPY - Alias e Automação
# =============================================================================
[tool.taskipy.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=html --cov-report=term"
test-api = "pytest tests/integration/ -v"
lint = "ruff check src/ tests/"
lint-fix = "ruff check src/ tests/ --fix"
format = "ruff format src/ tests/"
format-check = "ruff format src/ tests/ --check"
check = "task lint && task format-check && task test"
clean = "rm -rf .pytest_cache .coverage htmlcov __pycache__ .ruff_cache"
api = "uvicorn src.api.app:app --reload --port 8000"
api-prod = "gunicorn -w 4 -k uvicorn.workers.UvicornWorker src.api.app:app --bind 0.0.0.0:8000"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "pytest-cov>=7.0",
    "pytest-asyncio>=0.24.0",
]
